--- a/src/portfolio/portfolio.css
+++ b/src/portfolio/portfolio.css
@@ -56,3 +56,52 @@ img {
 	margin: 8px;
 	border-top: 3px solid #1f174a;
 }
+
+@media screen and (max-width: 414px) {
+	.project-1 {
+		grid-area: one;
+		padding: 5px 0;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.project-2 {
+		grid-area: two;
+		padding: 5px;
+		display: flex;
+		flex-direction: column;
+		margin-top: 10px;
+	}
+
+	.project-3 {
+		grid-area: three;
+		padding: 5px;
+		display: flex;
+		flex-direction: column;
+		margin-top: 10px;
+	}
+
+	.portfolio h3 {
+		padding: 10px;
+		margin: auto 10px;
+		text-align: center;
+		font-size: 16px;
+		background-color: rgba(225, 225, 225, 0.2);
+	}
+
+	.portfolio p {
+		padding: 5px 20px;
+		width: 300px;
+	}
+
+	.end {
+		margin: 0 19px;
+		border-top: 2px solid #1f174a;
+	}
+
+	img {
+		width: 90%;
+		padding: 0 21px;
+		float: none;
+	}
+}
